--- a/netlify.toml
+++ b/netlify.toml
@@ -17,6 +17,10 @@
   # Default build command.
   command = "jekyll build"
 
+  [build.environment]
+  RUBY_VERSION = "2.7.8"
+  BUNDLER_VERSION = "2.4.22"
+
   # Directory with the lambda functions to deploy to AWS.
   # functions = "project/functions/"
 
