Update build command in netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,7 +15,8 @@
   publish = "_site/"
 
   # Default build command.
-  command = "jekyll build"
+  command = "gem install bundler -v 2.4.22 && bundle install && jekyll build"
+  publish = "_site"
 
   [build.environment]
   RUBY_VERSION = "2.7.8"
