--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
   "name": "jekyll-cms",
   "version": "0.1.0",
-  "description": "A Jekyll demo site using Netlify CMS",
+  "description": "A Jekyll demo site using Netlify CMS for app promotion",
   "main": "gulpfile.js",
   "scripts": {
+    "build": "gulp build && bundle exec jekyll build",
+    "dev": "gulp watch & bundle exec jekyll serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Nicholas Stees",
+  "author": "Your Name",
   "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.18.13",
-    "css-mqpacker": "^6.0.1",
-    "gulp": "^3.8.8",
-    "gulp-autoprefixer": "1.0.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-clean-css": "^3.8.0",
+    "@babel/core": "^7.18.0",
+    "@babel/preset-env": "^7.18.0",
+    "browser-sync": "^2.27.0",
+    "css-mqpacker": "^7.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-postcss": "^7.0.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.77.0"
   },
   "repository": {
@@ -34,8 +40,9 @@
     "gulp",
     "sass",
     "browsersync",
-    "Netlify",
-    "NetlifyCMS"
+    "netlify",
+    "netlifycms",
+    "app-promotion"
   ],
   "homepage": "https://github.com/NickStees/jekyll-cms"
 }
