--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,8 @@ exclude:
   - package-lock.json
   - README.md
   - netlify.toml
+  - .ruby-version
+  - .nvmrc
 
 # Include
 include:
@@ -49,6 +51,17 @@ include:
 sass:
   style: compressed
   sass_dir: _sass
+
+# Kramdown settings
+kramdown:
+  input: GFM
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
 
 # Defaults
 defaults:
